<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/button_start"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:background="#2c8e2c"
        android:text="@string/button_start"
        android:textColorLink="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

    <Button
        android:id="@+id/button_player_money"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:background="#2c8e2c"
        android:text="@string/button_set_money"
        android:textColorLink="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_player_name"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:background="#2c8e2c"
        android:text="@string/button_set_name"
        android:textColorLink="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />
</android.support.constraint.ConstraintLayout>