<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/thanos_background_vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_call"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_text_call"
        android:textColorLink="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/button_bet"
        app:layout_constraintEnd_toStartOf="@+id/card_player1"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#2c8e2c" />

    <Button
        android:id="@+id/button_bet"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_text_bet"
        android:textColorLink="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/button_fold"
        app:layout_constraintEnd_toStartOf="@+id/card_player1"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#2c8e2c" />

    <Button
        android:id="@+id/button_fold"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_text_fold"
        android:textColorLink="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_player1"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#2c8e2c" />

    <ImageView
        android:id="@+id/card_flop1"
        android:layout_width="64dp"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        app:srcCompat="@drawable/red_back" />

    <ImageView
        android:id="@+id/card_player1"
        android:layout_width="125dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886"
        app:srcCompat="@drawable/red_back" />

    <ImageView
        android:id="@+id/card_thanos1"
        android:layout_width="58dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        app:srcCompat="@drawable/red_back" />

    <ImageView
        android:id="@+id/card_thanos2"
        android:layout_width="58dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        app:srcCompat="@drawable/red_back" />

    <ImageView
        android:id="@+id/card_player2"
        android:layout_width="125dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971"
        app:srcCompat="@drawable/red_back" />

    <ImageView
        android:id="@+id/card_flop3"
        android:layout_width="64dp"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        app:srcCompat="@drawable/red_back" />

    <ImageView
        android:id="@+id/card_flop2"
        android:layout_width="64dp"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        app:srcCompat="@drawable/red_back" />

    <ImageView
        android:id="@+id/card_flop4"
        android:layout_width="64dp"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        app:srcCompat="@drawable/red_back" />

    <ImageView
        android:id="@+id/card_flop5"
        android:layout_width="64dp"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        app:srcCompat="@drawable/red_back" />

    <TextView
        android:id="@+id/thanosMoneyCount"
        android:layout_width="221dp"
        android:layout_height="23dp"
        android:gravity="right"
        android:textColor="@android:color/white"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/potMoneyCount"
        android:layout_width="220dp"
        android:layout_height="22dp"
        android:gravity="right"
        android:textColor="@android:color/white"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/potBet"
        android:layout_width="221dp"
        android:layout_height="20dp"
        android:gravity="right"
        android:textColor="@android:color/white"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/playerMoneyCount"
        android:layout_width="220dp"
        android:layout_height="22dp"
        android:gravity="right"
        android:textColor="@android:color/white"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

</android.support.constraint.ConstraintLayout>